// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`npmScript() versus empty package.json 1`] = `
Object {
  "prettier": Object {
    "singleQuote": true,
    "trailingComma": "es5",
  },
  "scripts": Object {
    "pretest": "npm run prettier",
    "prettier": "npx -q prettier --loglevel=warn --write \\"**/*.{css,js,json,jsx,md,less,scss,ts,tsx}\\"",
  },
}
`;

exports[`npmScript() versus engines.node >= 8 1`] = `
Object {
  "engines": Object {
    "node": ">=8",
  },
  "prettier": Object {
    "singleQuote": true,
    "trailingComma": "all",
  },
  "scripts": Object {
    "pretest": "npm run prettier",
    "prettier": "npx -q prettier --loglevel=warn --write \\"**/*.{css,js,json,jsx,md,less,scss,ts,tsx}\\"",
  },
}
`;
